...
            style: TextStyle(fontSize: 20),
          ),
        ),
        Padding(
          padding: const EdgeInsets.symmetric(vertical: 4),
          child: TextField(
            key: const ValueKey('textfield-email'),
            controller: emailController,
            decoration: const InputDecoration(
              border: OutlineInputBorder(),
              hintText: 'Email address',
            ),
          ),
...
            onTap: () async {
              await block.submitSignupInit(
                email: emailController.text,
                fullName: fullName != null ? fullNameController.text : 'fixed',
              );
            },
            content: 'Sign up',
          ),
        ),
        const SizedBox(height: 10),
        SizedBox(
          width: double.infinity,
          height: 50,
...
