...
                  )
                : Container(),
            const SizedBox(height: 20),
            SizedBox(
              width: double.infinity,
              child: FilledTextButton(
                content: 'Continue',
                isLoading: isLoading.value,
                onTap: () async {
                  controller.setFocus(0);
                  isLoading.value = true;
                  final maybeError = await authService.finishLoginWithEmailOTP(
                    code.value,
...
