...
    return BasePage(
      child: Column(
        mainAxisAlignment: MainAxisAlignment.center,
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          const Padding(
            key: Key('welcome-text'),
            padding: EdgeInsets.symmetric(horizontal: 10, vertical: 5),
            child: Text(
              'Welcome',
              style: TextStyle(fontSize: 40, fontWeight: FontWeight.bold),
            ),
          ),
...
              'You are currently logged in. '
              'You can log out and log back in using a passkey.',
              style: TextStyle(fontSize: 20),
            ),
          ),
          SizedBox(
            key: const Key('sign-out-button'),
            width: double.infinity,
            height: 50,
            child: OutlinedButton(
              style: OutlinedButton.styleFrom(
                padding: const EdgeInsets.symmetric(vertical: 10),
                side: BorderSide(
...
